change image URL

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <p>If you do it right, it will last forever.</p>
         <div class="portfolio-content main-grid">
           <div class="card">
-            <img src="/images/portfolio-1.jpg" alt="portfolio-1" />
+            <img src="images/portfolio-1.jpg" alt="portfolio-1" />
             <div class="info">
               <h3>Project Here</h3>
               <p>
