--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <p>If you do it right, it will last forever.</p>
         <div class="portfolio-content main-grid">
           <div class="card">
-            <img src="images/portfolio-1.jpg" alt="portfolio-1" />
+            <img src="images/portfolio1.jpg" alt="portfolio-1" />
             <div class="info">
               <h3>Project Here</h3>
               <p>
@@ -159,7 +159,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="/images/portfolio-2.jpg" alt="portfolio-1" />
+            <img src="images/portfolio-2.jpg" alt="portfolio-1" />
             <div class="info">
               <h3>Project Here</h3>
               <p>
@@ -169,7 +169,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="/images/portfolio-3.jpg" alt="portfolio-1" />
+            <img src="images/portfolio-3.jpg" alt="portfolio-1" />
             <div class="info">
               <h3>Project Here</h3>
               <p>
@@ -189,7 +189,7 @@
         <p>Less is more work</p>
         <div class="about-content">
           <div class="image">
-            <img src="/images/about.jpg" alt="image-about" />
+            <img src="images/about.jpg" alt="image-about" />
           </div>
           <div class="text">
             <p>
